[project]
name = "tavily-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agno>=1.5.6",
    "fastapi>=0.115.12",
    "fastmcp==2.7.0",
    "flet>=0.28.3",
    "jwcrypto>=1.5.6",
    "mcp[cli]>=1.9.0",
    "openai-agents>=0.0.16",
    "tavily-python>=0.7.2",
]
